Switching to a simpler subset of the language (no generics/lambdas for now) and making some good progress with parsing into a more abstract data structure

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
     mavenCentral()
 }
 
+java.sourceCompatibility = JavaVersion.VERSION_14
+java.targetCompatibility = JavaVersion.VERSION_14
+
 dependencies {
     implementation 'org.antlr:antlr4:4.8-1'
     implementation 'org.antlr:antlr4-runtime:4.8-1'
