--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,10 @@ java.targetCompatibility = JavaVersion.VERSION_14
 dependencies {
     implementation 'org.antlr:antlr4:4.8-1'
     implementation 'org.antlr:antlr4-runtime:4.8-1'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
